[gd_scene load_steps=6 format=3 uid="uid://bldmn08p3vp3x"]

[ext_resource type="Script" path="res://吸血鬼生存/脚本/Mouse.gd" id="1_00e0f"]
[ext_resource type="Texture2D" uid="uid://dmipujsuo5iv2" path="res://吸血鬼生存/资源/tilemap_packed.png" id="2_wolf0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2atx6"]
size = Vector2(14, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxerh"]
atlas = ExtResource("2_wolf0")
region = Rect2(49, 160, 14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5kmh"]
size = Vector2(14, 16)

[node name="Mouse" type="CharacterBody2D" groups=["monster"]]
collision_layer = 4
collision_mask = 0
motion_mode = 1
script = ExtResource("1_00e0f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2atx6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_qxerh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_m5kmh")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
